<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="email_edit_hint">Please enter your email address</string>
    <string name="password">Password</string>
    <string name="password_edit_hint">Enter your password please</string>
    <string name="login">Login</string>
    <string name="create_account">Create an account</string>
    <string name="welcome_message">Welcome to the shoestore app. We\'re glad to help you shopping</string>
    <string name="shoe_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="shoe1_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="navigate">navigate</string>
    <string name="shoe_list">shoe list</string>
    <string name="instruction">Instruction</string>
    <string name="logout">logout</string>
    <string name="shoe_detail">shoe detail</string>
    <string name="welcome">welcome</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="description">Description</string>
    <string name="save">save</string>
</resources>
