<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_edit_field"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_edit_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/email_edit_hint"
            android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003" />

        <TextView
            android:id="@+id/password_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

        <EditText
            android:id="@+id/password_edit_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_edit_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_text_field"
            app:layout_constraintEnd_toEndOf="@+id/email_edit_field"
            app:layout_constraintStart_toStartOf="@+id/email_edit_field" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="@+id/password_text_field"
            app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/create_account"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="@+id/password_edit_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
