<?xml version="1.0" encoding="utf-8"?>
<!--
We use constraint layout because of number of views and their alignment
which need to have some constraints so that they can be align normally in the UI
-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/price_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_text_view"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="@+id/description_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="textPersonName"
            android:text="@={shoe.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/price_text_view"
            app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
            app:layout_constraintStart_toEndOf="@+id/price_text_view"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@+id/description_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/description_edit_text" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="@+id/price_edit_text"
            app:layout_constraintStart_toEndOf="@+id/description_text_view"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/save"
            android:textColorHighlight="@android:color/holo_green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
